# eyayOS

./: .pre-commit-config.yaml  docker-compose.yml  fix_poetry_packages.py  migrate_app_to_src.py  pyproject.toml  reset_pyenv_poetry_simple.sh
belgeler/: KAPSAMLI_KURULUM_REHBERI.md  README.md  analiz-servisi-template.md  dil-isleme-servisi-template.md  hafiza-servisi-template.md  konusma-servisi-template.md  os2-setupm.md  sohbet-servisi-template.md  yetkilendirme-servisi-template.md
servisler/analiz/: pyproject.toml
servisler/dil/: pyproject.toml
servisler/hafiza/: pyproject.toml
servisler/ses/: pyproject.toml
servisler/sohbet/: pyproject.toml
servisler/yetkilendirme/: pyproject.toml
