[tool.poetry]
name = "eyay-analiz-servisi"
version = "0.1.0"
description = "EyAy.OS Analiz ve İzleme Mikroservisi"
authors = ["Barut Şeref <barutseref@barutben.com>"]
packages = [
    { include = "app", from = "src" }
]
[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
plotly = "^5.17.0"
prometheus-client = "^0.19.0"
influxdb-client = "^1.38.0"
scikit-learn = "^1.3.0"
pydantic = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
