[tool.poetry]
name = "eyay-dil-isleme-servisi"
version = "0.1.0"
description = "EyAy.OS Türkçe Doğal Dil İşleme Mikroservisi"
authors = ["Barut Şeref <barutseref@barutben.com>"]
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
transformers = "^4.35.0"
torch = "^2.1.0"
sentence-transformers = "^2.2.0"
spacy = "^3.7.4"
datasets = "^2.14.0"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
pandas = "^2.1.0"
langdetect = "^1.0.9"
textblob = "^0.17.1"
zemberek-python = "^0.1.0"
turkishstemmer = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
