[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eyay-sohbet-servisi"
version = "0.1.0"
description = "EyAy.OS Sohbet Yönetimi Mikroservisi"
authors = [ "Barut Şeref <barutseref@barutben.com>",]
[[tool.poetry.packages]]
include = "app"
from = "src"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.0"
websockets = "^12.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
pydantic = "^2.4.0"
python-socketio = "^5.10.0"
aiofiles = "^23.2.1"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard",]
version = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
websocket-client = "^1.6.0"
